<resources>
    <string name="name">Hermes</string>
    <string name="notifications">Notifications</string>
    <string name="text_nombre_usuario">Usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="loginGoogle">Acceder con Google</string>
    <string name="forgot_password">¿Olvido su contraseña?</string>
    <string name="welcome_text">¡Bienvenido a Hermes Notifications!</string>
    <string name="sus_compromisos">Sus compromisos</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
