<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            />

        <Button
            android:id="@+id/btn_compromisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RaisedButtonDark"
             android:text="@string/sus_compromisos"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:paddingTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/text_nombre_usuario"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconomail"
                    android:paddingLeft="200dp"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="71dp"
                android:layout_height="85dp"
                android:src="@drawable/user"
                android:layout_gravity="center"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contratos"
                android:paddingLeft="10dp"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tareas"
                    android:paddingLeft="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Resueltas"
                    android:paddingLeft="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pendientes"
                    android:paddingLeft="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <fragment
            android:id="@+id/fragment_uno"
            android:name="cl.gazulabs.hermesapp.view.fragment.BlankFragment"
            android:layout_width="150dp"
            android:layout_height="150dp" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>





